--- a/index.html
+++ b/index.html
@@ -96,43 +96,12 @@ p, ul, ol, table, dl {
 /* Set the width of the sidebar to 120px */
 .w3-sidebar {width: 213px;background: #1d1e22;float:left;height:auto;}
 /* Add a left margin to the "page content" that matches the width of the sidebar (120px) */
-#main {margin-left: 204px;float:right;background: #1d1e22;}
+#main {float:right;background: #1d1e22;}
 /* Remove margins from "page content" on small screens */
 @media only screen and (max-width: 600px) {#main {margin-left: 0}}
 </style>
 <body class="w3-black">
 <div class="content">
-<!-- Icon Bar (Sidebar - hidden on small screens) -->
-    <nav class="w3-sidebar w3-bar-block w3-small w3-hide-small w3-center">
-      <img src="assets/picture-professional.png" alt="Vivek Nair" width="90%">
-      <h1>Vivek Nair</h1>
-      <p style="color:#FFE792; text-align:center">vivekaxl@gmail.com</p>
-      <p style="text-align: center;font-size: 18px;">
-      <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #0ef952;font-size: 22px;"><i class="fas fa-file"></i></a>
-      <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #0ef952;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-      <a href="https://github.com/vivekaxl" target="_blank" style="color: #0ef952;font-size: 23px;"><i class="fab fa-github"></i></a>
-      <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #0ef952;font-size: 23px;"><i class="fab fa-twitter"></i></a>
-      <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #0ef952;font-size: 23px;"><i class="fab fa-quora"></i></a>
-      <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #0ef952;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-      <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #0ef952;font-size: 23px;"><i class="fab fa-facebook"></i></a>
-      </p>
-    </nav>
-
-    <!-- Navbar on small screens (Hidden on medium and large screens) -->
-    <div class="w3-hide-large w3-hide-medium " id="navbar">
-      <a href="#default" id="logo">Vivek Nair</a>
-      <div id="navbar-right" id="blah">
-          <!-- <p style="text-align: center;font-size: 18px;"> -->
-          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #7fb084;font-size: 22px;"><i class="fas fa-file"></i></a>
-          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-github"></i></a>
-          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-quora"></i></a>
-          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #7fb084;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #7fb084;font-size: 23px;"><i class="fab fa-facebook"></i></a>
-          <!-- </p> -->
-      </div>
-    </div>
 
     <!-- Page Content -->
     <div class="w3-padding-large" id="main">
@@ -144,10 +113,6 @@ p, ul, ol, table, dl {
 
       <!-- About Section -->
       <!-- <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about"> -->
-    <div class="w3-hide-large w3-hide-medium " style="background-color: #1d1e22;border-style: solid;border-width: 5px;border-color: #1d1e22;border-top-width: 0px;">
-      <h3 style="color: #1d1e22">Place Holder</h3>
-      <img src="assets/picture-professional.png" alt="Vivek Nair" class="center">
-    </div>
     <div style="background-color: #1d1e22;border-style: solid;border-width: 5px;border-color: #1d1e22;border-top-width: 0px;border-bottom-width: 0px;">
       <h3>About</h3>
     </div>
