--- a/index.html
+++ b/index.html
@@ -105,14 +105,21 @@ p, ul, ol, table, dl {
 
     <!-- Page Content -->
     <div class="w3-padding-large" id="main">
-      <!-- Header/Home -->
-      <!-- <header class="w3-container w3-padding-32 w3-center w3-black w3-hide-large w3-hide-medium" id="home">
-        <h1 style="text-align: center">Vivek Nair</h1>
-        <p style="text-align: center;font-size: 18px; color:#FFE792">vivekaxl@gmail.com</p>
-      </header> -->
 
-      <!-- About Section -->
-      <!-- <div class="w3-content w3-justify w3-text-grey w3-padding-32" id="about"> -->
+    <div style="background-color: #464545;border-style: solid;border-width: 5px;border-color: #464545;border-top-width: 0px;border-bottom-width: 0px;">
+      vivekaxl@gmail.com
+            <div id="navbar-right" id="blah">
+          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #ffffff;font-size: 22px;"><i class="fas fa-file"></i></a>
+          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-quora"></i></a>
+          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #ffffff;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-facebook"></i></a>
+          
+      </div>
+    </div>
+    <p> </p>
     <div style="background-color: #464545;border-style: solid;border-width: 5px;border-color: #464545;border-top-width: 0px;border-bottom-width: 0px;">
       <h3>About</h3>
     </div>
