--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@ p, ul, ol, table, dl {
     <!-- Page Content -->
     <div class="w3-padding-large" id="main">
 
-    <div style="background-color: #464545;border-style: solid;border-width: 5px;border-color: #464545;border-top-width: 0px;border-bottom-width: 0px;">
-      vivekaxl@gmail.com
+     <div style="background-color: #1e1e1e;border-style: solid;border-width: 5px;border-color: #1e1e1e;border-top-width: 0px;border-bottom-width: 0px;">
+      <a href="http://vivekaxl.com" style="font-size: 26px">Vivek  Nair</a>
             <div id="navbar-right" id="blah">
+          <a href="mailto:vivekaxl@gmail.com"  title="Email" target="_blank" style="color: #ffffff;font-size: 22px;"><i class="fas fa-envelope"></i>
           <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #ffffff;font-size: 22px;"><i class="fas fa-file"></i></a>
           <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-github"></i></a>
