--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ p, ul, ol, table, dl {
       <b style="color:#fdd752">Performance Prediction of Configurable System: </b> As a part of my Ph.D., I explored ways to easily optimize non-functional properties (e.g. runtime, latency etc.)
       of highly configurable systems. Techniques like spectral learning and rank based learning is used to learn features of the configurations. 
       <ul> 
-        <li> Vivek Nair, R. Krishna, T. Menzies, P. Jamshidi. <a href="https://arxiv.org/pdf/1803.03900" target="_blank"  style="font-size:15px;">Transfer Learning with Bellwethers to find Good Configurations.</a> (Submitted 2019)</li>
+        <li> R. Krishna, Vivek Nair, P. Jamshidi, T. Menzies. <a href="https://arxiv.org/abs/1911.01817" target="_blank"  style="font-size:15px;">Whence to Learn? Transferring Knowledge in Configurable Systems using BEETLE.</a> TSE 2020</li>
         <li> Vivek Nair, Z. Yu, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1705.05018" target="_blank"  style="font-size:15px;">Finding Faster Configurations using FLASH.</a> TSE 2018. </li>
         <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/pdf/1702.05701.pdf" target="_blank"  style="font-size:15px;">Using Bad Learners to find Good Configurationsi</a> FSE 2017. </li>
         <li> Vivek Nair, T. Menzies, N. Seigmund, S. Apel. <a href="https://arxiv.org/abs/1701.08106" target="_blank" style="font-size:15px;">Faster  Discovery  of  Faster  System  Configurations  with  Spectral Learning</a> ASE 2017. </li>
