--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@ h4 {
   font-size: 20px;
 }
 a {
-  color:#ffffff;
   font-weight:500;
   text-decoration:none;
   font-size: 17px;
@@ -107,16 +106,16 @@ p, ul, ol, table, dl {
     <div class="w3-padding-large" id="main">
 
      <div style="background-color: #4b4b4b;border-style: solid;border-width: 5px;border-color: #4b4b4b;border-top-width: 0px;border-bottom-width: 0px;">
-      <a href="http://vivekaxl.com" style="font-size: 26px">Vivek  Nair</a>
+      <a href="http://vivekaxl.com" style="color: #fda9a9; font-size: 26px">Vivek  Nair</a>
             <div id="navbar-right" id="blah">
-          <a href="mailto:vivekaxl@gmail.com"  title="Email" target="_blank" style="color: #ffffff;font-size: 22px;"><i class="fas fa-envelope"></i>
-          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #ffffff;font-size: 22px;"><i class="fas fa-file"></i></a>
-          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
-          <a href="https://github.com/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-github"></i></a>
-          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-twitter"></i></a>
-          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-quora"></i></a>
-          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #ffffff;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
-          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #ffffff;font-size: 23px;"><i class="fab fa-facebook"></i></a>
+          <a href="mailto:vivekaxl@gmail.com"  title="Email" target="_blank" style="color: #fda9a9;font-size: 22px;"><i class="fas fa-envelope"></i>
+          <a href="http://vivekaxl.github.io/assets/VivekNair-Resume.pdf"  title="Resume" target="_blank" style="color: #fda9a9;font-size: 22px;"><i class="fas fa-file"></i></a>
+          <a href="https://www.linkedin.com/in/vivekaxl" target="_blank" style="color: #fda9a9;font-size: 23px;"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/vivekaxl" target="_blank" style="color: #fda9a9;font-size: 23px;"><i class="fab fa-github"></i></a>
+          <a href="https://twitter.com/vivekaxl" target="_blank" style="color: #fda9a9;font-size: 23px;"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank" style="color: #fda9a9;font-size: 23px;"><i class="fab fa-quora"></i></a>
+          <a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #fda9a9;font-size: 7.4px;"><i class="ai ai-google-scholar-square ai-3x"></i></a>
+          <a href="https://www.facebook.com/vivek.nair.5895834" target="_blank" style="color: #fda9a9;font-size: 23px;"><i class="fab fa-facebook"></i></a>
           
       </div>
     </div>
