--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   }
 }
       body {
-        background-color: #333;
+        background-color: #1d1c1c;
         color: white;
         display: flex;
         align-items: center;
