--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
   <li><a href="https://www.linkedin.com/in/vivekaxl" target="_blank"><i class="fab fa-linkedin fa-icon"></i></a></li>
   <li><a href="https://www.twitter.com/vivekaxl" target="_blank"><i class="fab fa-twitter-square fa-icon"></i></a></li>
   <li><a href="https://github.com/vivekaxl" target="_blank"><i class="fab fa-github-square fa-icon"></i></a></li>
-  <li><a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank"><i class="fab fa-quora fa-icon"></i></a></li>
+  <li><a href="https://www.instagram.com/vivekaxl/" target="_blank"><i class="fa fa-instagram"></i></a></li>
   <li><a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank"><i class="ai ai-google-scholar-square fa-icon"></i></a></li>
   <li><a href="https://www.facebook.com/vivek.nair.5895834" target="_blank"><i class="fab fa-facebook-square fa-icon"></i></a></li>
   <li><a href="https://open.spotify.com/user/12124131616?si=8O4wZcB8S6Gjx7_NHoCBhA" target="_blank"><i class="fab fa-spotify fa-icon"></i></a></li>
+  <li><a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank"><i class="fab fa-quora fa-icon"></i></a></li>
 </ul>
 
       </div>
