--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Vivek Nair</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.rawgit.com/jpswalsh/academicons/master/css/academicons.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
     <style>
       @media (max-width: 767px) {
@@ -36,7 +37,7 @@
   }
 }
       body {
-        background-color: #1d1c1c;
+        background-color: #080808;
         color: white;
         display: flex;
         align-items: center;
@@ -68,9 +69,9 @@
       }
       .box {
         background-color: black;
-        padding: 20px;
-        border-radius: 10px;
-        box-shadow: 0 0 10px white;
+        padding: 11px;
+        border-radius: 40px;
+        box-shadow: 0 0 22px #f08b8b;
         text-align: center;
       }
       .footer {
@@ -78,7 +79,7 @@
         bottom: 10px;
         left: 50%;
         transform: translateX(-50%);
-        font-size: 12px;
+        font-size: 6px;
       }
     </style>
   </head>
@@ -92,7 +93,7 @@
   <li><a href="https://www.twitter.com/vivekaxl" target="_blank"><i class="fab fa-twitter-square fa-icon"></i></a></li>
   <li><a href="https://github.com/vivekaxl" target="_blank"><i class="fab fa-github-square fa-icon"></i></a></li>
   <li><a href="https://www.instagram.com/vivekaxl/" target="_blank"><i class="fab fa-instagram fa-icon"></i></a></li>
-  <li><a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank"><i class="ai ai-google-scholar-square fa-icon"></i></a></li>
+  <li><a href="https://scholar.google.com/citations?user=C21LS6QAAAAJ&amp;hl=en" target="_blank" style="color: #ffffff;font-size: 12px"><i class="ai ai-google-scholar-square ai-3x"></i></a></li>
   <li><a href="https://www.facebook.com/vivek.nair.5895834" target="_blank"><i class="fab fa-facebook-square fa-icon"></i></a></li>
   <li><a href="https://open.spotify.com/user/12124131616?si=8O4wZcB8S6Gjx7_NHoCBhA" target="_blank"><i class="fab fa-spotify fa-icon"></i></a></li>
   <li><a href="https://www.quora.com/profile/Vivek-Nair-18" target="_blank"><i class="fab fa-quora fa-icon"></i></a></li>
@@ -100,6 +101,5 @@
 
       </div>
     </div>
-    <p class="footer">This website was created by ChatGPT on February 8, 2023.</p>
   </body>
 </html>
