--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
       }
       #who-am-i-link {
 			position: absolute;
-			top: 15px;
-    		right: 20px;
+			top: 4%;
+    			right: 5%;
 			z-index: 9999;
 			color: #ffffff;
 		}
@@ -119,7 +119,7 @@
     <div id="who-am-i-textbox">
 	    <p>I am a software engineer at Meta. I build tools that accelerate Meta's journey towards building privacy aware Ads stack.</p> 
 
-	    <p> I received my Ph.D. in Computer Science from North Carolina State University in 2018, where <a href="http://https://timm.github.io/" target="_blank" >Dr. Tim Menzies</a> was my advisor. I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions. Before that a Software Engineer at Samsung Research Institute - Noida working in Memory & File System.</p>
+	    <p> I received my Ph.D. in Computer Science from North Carolina State University in 2018, where <a href="http://timm.github.io/" target="_blank" >Dr. Tim Menzies</a> was my advisor. I was previously a Reseach Intern at Microsoft Research, and Lexisnexis Risk Solutions. Before that a Software Engineer at Samsung Research Institute - Noida working in Memory & File System.</p>
 	  </div>
 
 	<script>
